# wav2letter

./: .dockerignore  .gitignore  Dockerfile-Inference  Dockerfile-Server  Dockerfile-Server-Base  Dockerfile-Stream-Decoder  Dockerfile-Utterance-Decoder  Pipfile  SERVER.md  scratch.txt
client/: client1.py  stream.py  utterance.py  wav2letter_pb2.py  wav2letter_pb2_grpc.py
cmake/: FindFFTW.cmake
inference/cmake/: Buildgrpc.cmake  Findgrpc.cmake
inference/inference/common/: DefaultMemoryManager.h
inference/inference/decoder/: Decoder.cpp
inference/inference/examples/: AudioToWords.cpp  CMakeLists.txt  InteractiveStreamingASRExample.cpp  SimpleStreamingASRExample.cpp  StreamDecoder.cpp  UtteranceDecoder.cpp  server.cc  wav2letter.proto
